# Robotics_and_Practice

./: README.md
footed robot/: Inverse_Kinematics.m  Trajectory.m  forward_kinematics.m
wheeled robot/PPT-wheeled robot/: 机器人技术与实践-移动1.pptx
wheeled robot/code/: map.yaml  readme.txt
wheeled robot/code/install/: local_setup.sh
wheeled robot/code/install/pubsub_package/lib/pubsub_package/: global_pub  local_pub
wheeled robot/code/install/pubsub_package/share/pubsub_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
wheeled robot/code/log/: latest_build
wheeled robot/code/src/: CMakeLists.txt  setup.py
wheeled robot/code/src/pubsub_package/: global.py  local.py
wheeled robot/code/src/pubsub_package/planner/: dwa.py
wheeled robot/map/: map.pgm
